refactor(operator): finish remaining admin-to-operator renames
